# Solar-Control

./: .gitignore  Solar_panels.db  map.html  pyproject.toml
Arduino/Solar_control_ard_stat/: Solar_control_ard_stat.ino
PY/: Backgrounds.py  Backgrounds.qrc  Change_login.py  Change_login_form.py  Change_name_form.py  Change_pass.py  Change_pass_form.py  Forgot_pass.py  Forgot_pass_form.py  Log_in.py  Log_in_form.py  Sign_in.py  Sign_in_form.py  Solar_panels.db  Solar_panels_server.db  U_profile.py  U_profile_form.py  api.py  control.py  db_handler.py  models.py
UI/SolarControl_Log_page/: Log_in.ui
UI/SolarControl_Sign_in_page/: Sign_in.ui
UI/SolarControl_U_profile/: U_profile.ui
dimplom_data/: Kont_d.drawio  Щоденник практики Танасійчук.docx  видгут вид керивныка.DOCX  зміст.DOCX  правка Щоденник практики Танасійчук.docx
dimplom_data/+++/: Анотація.DOCX  Подання_Танасійчук.doc
dimplom_data/Готово/: Економіка_Диплом_Танасійчук.DOCX  Завдання Танасійчук.docx  Заява на захист дистанційно.docx  Зміст_Танасійчук.DOCX  Титул бланк Танасійчук.DOCX
Диплом/: Преддипломна практика Танасійчук.DOCX  табель обліку.DOCX
Диплом/+++/: Резюме Танасійчук.DOCX  Рецензія_Танасійчук.doc
Диплом/Готово/: Охорона_праці_Танасійчук.DOCX  Рамки для додатків.docx
Диплом/Практика/: Вступ. дослідження..._Танасійчук.DOCX
